Practicing while watching the course. 강의 보며 실습!

--- a/4강_실습(원본).ipynb
+++ b/4강_실습(원본).ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+gNd/EX8vkMBkBv9DpqZ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Python-Programming/blob/main/4%EA%B0%95_%EC%8B%A4%EC%8A%B5(%EC%9B%90%EB%B3%B8).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sonosung/python_programming/blob/main/4%EA%B0%95_%EC%8B%A4%EC%8A%B5(%EC%9B%90%EB%B3%B8).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,13 +37,215 @@
     {
       "cell_type": "code",
       "source": [
-        "“Hello World!”"
+        "\"Hello World!\""
       ],
       "metadata": {
-        "id": "Rupa9hQnfVSx"
+        "id": "Rupa9hQnfVSx",
+        "outputId": "5b71aad3-c4ae-4377-90e9-0aeec58a6f6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hello World!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1 * (2 + 2) * 1"
+      ],
+      "metadata": {
+        "id": "8_pn_5rItHAf",
+        "outputId": "641ba824-c2a3-4a96-db22-208f19819275",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "2 ** 10 * 5"
+      ],
+      "metadata": {
+        "id": "m8Vl9GT4tL12",
+        "outputId": "e7a71769-4886-49a9-a847-4990098f4b80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"컴퓨터\" + \"과학\""
+      ],
+      "metadata": {
+        "id": "w62zJ3sItr45",
+        "outputId": "dd4dccf9-60d5-415c-b568-c4b3f0c794be",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'컴퓨터과학'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"2\" + \"3\" + \" \" + \"2\""
+      ],
+      "metadata": {
+        "id": "lSY34Qf4twGs",
+        "outputId": "804117b8-9db8-49e0-e4f3-89e3e1a9de0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'23 2'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(8*8)"
+      ],
+      "metadata": {
+        "id": "4HyfquT6t1iq",
+        "outputId": "993d51d8-dcd1-44c9-eda8-3f88b553c743",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"python\")"
+      ],
+      "metadata": {
+        "id": "iqRYRRBYt7F9",
+        "outputId": "0250376a-b694-4f8b-8eec-d91efa909ee8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"python\")\n",
+        "print(\"is fun\")"
+      ],
+      "metadata": {
+        "id": "pL16WzDquEPr",
+        "outputId": "32959575-51d4-4e75-cbb0-34d0d8ceb9fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python\n",
+            "is fun\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -62,7 +263,53 @@
         "print(3.14 * 20 ** 2 + 3.14 * 20 * 30)"
       ],
       "metadata": {
-        "id": "buMmaXCXjk6D"
+        "id": "buMmaXCXjk6D",
+        "outputId": "b957ec9f-0229-4b87-9885-7891e9b72010",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12559.999999999998\n",
+            "3140.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#주석. 더하기 연산\n",
+        "print(1 + 1)"
+      ],
+      "metadata": {
+        "id": "CWCSkW6XuGcA",
+        "outputId": "600d61ee-16a7-4652-fcd6-073752843d56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2bLiinbuuaQq"
       },
       "execution_count": null,
       "outputs": []
