--- a/10강_실습(원본).ipynb
+++ b/10강_실습(원본).ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Python-Programming/blob/main/10%EA%B0%95_%EC%8B%A4%EC%8A%B5(%EC%9B%90%EB%B3%B8).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sonosung/python_programming/blob/main/10%EA%B0%95_%EC%8B%A4%EC%8A%B5(%EC%9B%90%EB%B3%B8).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -73,6 +73,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "class Cone :\n",
+        "    def __init__(self, radious = 20, height = 30) :\n",
+        "      self.r = radious\n",
+        "      self.h = height\n",
+        "    def get_vol (self) :\n",
+        "      return 1/3 * 3.14 * self.r ** 2 * self.h\n",
+        "\n",
+        "    def get_surf (self) :\n",
+        "      return 3.14 * self.r ** 2 + 3.14 * self.r * self.h"
+      ],
+      "metadata": {
+        "id": "_dneIxftgPLy"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "이름, 나이, 몸무게, 키를 데이터 필드로 사용하는 BMI 클래스를 정의하는 프로그램을 작성하시오.\n",
@@ -91,16 +110,30 @@
       "source": [
         "class BMI :\n",
         "    def __init__(self, name, age, weight, height) :\n",
+        "            self.name = name\n",
+        "            self.age = age\n",
+        "            self.weight = weight\n",
+        "            self.height = height\n",
         "\n",
-        "    def get_BMI() :\n",
-        "    \n",
-        "    def get_status() :\n",
-        "            "
+        "    def get_BMI(self) :\n",
+        "            return self.weight / (self.height / 100) **2\n",
+        "\n",
+        "    def get_status(self) :\n",
+        "            BMI = self.get_BMI()\n",
+        "\n",
+        "            if BMI >= 23 and BMI < 25 :\n",
+        "                return \"과체중\"\n",
+        "            elif BMI >= 18.5 and BMI < 23 :\n",
+        "                return \"정상\"\n",
+        "            elif BMI < 18.5 :\n",
+        "                return \"저체중\"\n",
+        "            else :\n",
+        "                return \"비만\""
       ],
       "metadata": {
         "id": "kGjkpruVvTS5"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -123,12 +156,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "unit_cone = Cone()\n",
+        "big_cone = Cone(50, 100)\n",
+        "\n",
+        "print(\"단위 원뿔의 겉넓이와 부피는\", unit_cone.get_surf(), unit_cone.get_vol(), \"입니다.\")\n",
+        "print(\"큰 원뿔의 겉넓이와 부피는\", big_cone.get_surf(), big_cone.get_vol(), \"입니다.\")\n"
+      ],
       "metadata": {
-        "id": "zQVNoXVKyB3M"
+        "id": "zQVNoXVKyB3M",
+        "outputId": "9e5dda6e-c206-4315-8524-be0c236de64e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "단위 원뿔의 겉넓이와 부피는 3140.0 12559.999999999998 입니다.\n",
+            "큰 원뿔의 겉넓이와 부피는 23550.0 261666.66666666666 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -141,12 +193,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "user1 = BMI(\"홍길동\",  30, 70, 178)\n",
+        "\n",
+        "print(user1.name + \"님(\" + str(user1.age) + \"세)의 BMI 수치는 \", user1.get_BMI(), \"결과는 \", user1.get_status(), \"입니다.\")"
+      ],
       "metadata": {
-        "id": "tiZVGBTmyPFV"
+        "id": "tiZVGBTmyPFV",
+        "outputId": "5cb78124-c673-4dc6-c4da-ca72d058c43a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "홍길동님(30세)의 BMI 수치는  22.093170054286073 결과는  정상 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -156,6 +224,112 @@
       "metadata": {
         "id": "CAMthAFhmBAf"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dir(str)"
+      ],
+      "metadata": {
+        "id": "5xbbFD_9o-W5",
+        "outputId": "975cfe06-ce19-42c7-a971-09a928f8d3dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__add__',\n",
+              " '__class__',\n",
+              " '__contains__',\n",
+              " '__delattr__',\n",
+              " '__dir__',\n",
+              " '__doc__',\n",
+              " '__eq__',\n",
+              " '__format__',\n",
+              " '__ge__',\n",
+              " '__getattribute__',\n",
+              " '__getitem__',\n",
+              " '__getnewargs__',\n",
+              " '__getstate__',\n",
+              " '__gt__',\n",
+              " '__hash__',\n",
+              " '__init__',\n",
+              " '__init_subclass__',\n",
+              " '__iter__',\n",
+              " '__le__',\n",
+              " '__len__',\n",
+              " '__lt__',\n",
+              " '__mod__',\n",
+              " '__mul__',\n",
+              " '__ne__',\n",
+              " '__new__',\n",
+              " '__reduce__',\n",
+              " '__reduce_ex__',\n",
+              " '__repr__',\n",
+              " '__rmod__',\n",
+              " '__rmul__',\n",
+              " '__setattr__',\n",
+              " '__sizeof__',\n",
+              " '__str__',\n",
+              " '__subclasshook__',\n",
+              " 'capitalize',\n",
+              " 'casefold',\n",
+              " 'center',\n",
+              " 'count',\n",
+              " 'encode',\n",
+              " 'endswith',\n",
+              " 'expandtabs',\n",
+              " 'find',\n",
+              " 'format',\n",
+              " 'format_map',\n",
+              " 'index',\n",
+              " 'isalnum',\n",
+              " 'isalpha',\n",
+              " 'isascii',\n",
+              " 'isdecimal',\n",
+              " 'isdigit',\n",
+              " 'isidentifier',\n",
+              " 'islower',\n",
+              " 'isnumeric',\n",
+              " 'isprintable',\n",
+              " 'isspace',\n",
+              " 'istitle',\n",
+              " 'isupper',\n",
+              " 'join',\n",
+              " 'ljust',\n",
+              " 'lower',\n",
+              " 'lstrip',\n",
+              " 'maketrans',\n",
+              " 'partition',\n",
+              " 'removeprefix',\n",
+              " 'removesuffix',\n",
+              " 'replace',\n",
+              " 'rfind',\n",
+              " 'rindex',\n",
+              " 'rjust',\n",
+              " 'rpartition',\n",
+              " 'rsplit',\n",
+              " 'rstrip',\n",
+              " 'split',\n",
+              " 'splitlines',\n",
+              " 'startswith',\n",
+              " 'strip',\n",
+              " 'swapcase',\n",
+              " 'title',\n",
+              " 'translate',\n",
+              " 'upper',\n",
+              " 'zfill']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -168,12 +342,95 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#접근제어자 설정의 필요성. 데이터 값을 사용자가 변경하지 못하게 하여, 만들어진 객체들이 정상적인 범위 내에서 동작하도록 하기 위함.\n",
+        "sample_cone = Cone(50, 100)\n",
+        "\n",
+        "sample_cone.r = -50\n",
+        "\n",
+        "print(sample_cone.get_surf())"
+      ],
       "metadata": {
-        "id": "86XSydVIynoU"
+        "id": "86XSydVIynoU",
+        "outputId": "78457120-c373-43f8-eb53-19d273e60be2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-7850.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class privateCone :\n",
+        "    def __init__(self, radius = 20, height = 30) :\n",
+        "      if radius > 0 and height > 0 :\n",
+        "          self.__r = radius\n",
+        "          self.__h = height\n",
+        "\n",
+        "    def get_vol (self) :\n",
+        "          return 1/3 * 3.14 * self.__r ** 2 * self.__h\n",
+        "\n",
+        "    def get_surf (self) :\n",
+        "           return 3.14 * self.__r ** 2 + 3.14 * self.__r * self.__h\n",
+        "\n",
+        "    def get_radious(self) :\n",
+        "           return self.__r\n",
+        "\n",
+        "    def get_height(self) :\n",
+        "            return self.__h\n",
+        "\n",
+        "    def set_radious(self, radius) :\n",
+        "            if radius > 0 :\n",
+        "                self.__r = radius\n",
+        "\n",
+        "    def set_height(self, height) :\n",
+        "            if height > 0 :\n",
+        "                self.__h = height\n",
+        ""
+      ],
+      "metadata": {
+        "id": "giD24zTRqJyw"
+      },
+      "execution_count": 23,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "perfect_cone = privateCone(50, 100)\n",
+        "perfect_cone.get_surf()\n",
+        "\n",
+        "print(\"단위 원뿔의 겉넓이와 부피는\", unit_cone.get_surf(), unit_cone.get_vol(), \"입니다.\")\n",
+        "print(\"큰 원뿔의 겉넓이와 부피는\", big_cone.get_surf(), big_cone.get_vol(), \"입니다.\")"
+      ],
+      "metadata": {
+        "id": "HQ8B6YfVuwxR",
+        "outputId": "90e1f288-084c-40b6-c65a-649307827709",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "단위 원뿔의 겉넓이와 부피는 3140.0 12559.999999999998 입니다.\n",
+            "큰 원뿔의 겉넓이와 부피는 23550.0 261666.66666666666 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -188,7 +445,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xz4rXoCBzAJD"
+        "id": "zV5OhE18rJP8"
       },
       "execution_count": null,
       "outputs": []
