--- a/14강_실습(원본).ipynb
+++ b/14강_실습(원본).ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzeHNIH29l0rh51ohV4vFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Python-Programming/blob/main/14%EA%B0%95_%EC%8B%A4%EC%8A%B5(%EC%9B%90%EB%B3%B8).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sonosung/python_programming/blob/main/14%EA%B0%95_%EC%8B%A4%EC%8A%B5(%EC%9B%90%EB%B3%B8).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -62,47 +61,227 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "AXszvhGpqkw0"
+        "id": "AXszvhGpqkw0",
+        "outputId": "5b581091-7ede-4b91-938e-3be2e3c08ebf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* * * \n",
+            "* * * \n",
+            "* * * \n",
+            "컴퓨터 차례입니다.\n",
+            "* * * \n",
+            "* * * \n",
+            "* * * \n",
+            "컴퓨터가 행 3, 열 1 을/를 선택했습니다.\n",
+            "\n",
+            "* * * \n",
+            "* * * \n",
+            "X * * \n",
+            "사용자 차례입니다.\n",
+            "* * * \n",
+            "* * * \n",
+            "X * * \n",
+            "선택할 빈칸의 위치를 입력하세요 : 0 0\n",
+            "사용자가 행 0, 열 0 을/를 선택했습니다.\n",
+            "\n",
+            "게임을 종료합니다.\n",
+            "\n",
+            "* * * \n",
+            "* * * \n",
+            "X * * \n"
+          ]
+        }
+      ],
       "source": [
+        "import random\n",
+        "\n",
         "class Tic_Tac_Toe:\n",
-        " \n",
+        "\n",
         "    # 게임판 생성\n",
         "    def __init__(self):\n",
+        "            self.board = []\n",
         "\n",
-        "    # 게임판 초기화\n",
+        "    # 게임판 초기화. 3X3의 2차원 행렬 생성\n",
         "    def create_board(self):\n",
+        "            for i in range(3) :\n",
+        "                  row = []  #1. 하나의 행 생성.\n",
+        "                  for j in range(3) :       #2. '*' 로 채운 3개의 칸 만들기\n",
+        "                        row.append('*')\n",
+        "                  self.board.append(row) #self.board 판에 1~2에서 만든 row 넣음\n",
         "\n",
         "    # 첫 플레이어 선택\n",
         "    def select_first_player(self):\n",
+        "            if random.randint(0,1) == 0:\n",
+        "                    return 'X'\n",
+        "            else :\n",
+        "                    return 'O'\n",
         "\n",
         "    # 기호 표시\n",
         "    def mark_spot(self, row, col, player):\n",
+        "            self.board[row][col] = player\n",
         "\n",
         "    # 승리 상태 확인\n",
         "    def is_win(self, player):\n",
         "\n",
+        "            n = len(self.board) #변수의 갯수 확인\n",
+        "            #행 확인\n",
+        "            for i in range(n):\n",
+        "                  win = True #승리 상태로 초기화\n",
+        "                  for j in range(n) :\n",
+        "                        if self.board[i][j] != player :\n",
+        "                              win = False\n",
+        "                              break\n",
+        "                  if win == True :\n",
+        "                        return win\n",
+        "\n",
+        "            #열 확인\n",
+        "            for i in range(n):\n",
+        "                  win = True\n",
+        "                  for j in range(n) :\n",
+        "                        if self.board[j][i] != player : #행과 순서가 반대이므로 j와 i 위치를 바꿈\n",
+        "                              win = False\n",
+        "                              break\n",
+        "                  if win == True :\n",
+        "                        return win\n",
+        "\n",
+        "           #오른쪽 대각선 확인\n",
+        "            win = True\n",
+        "            for i in range(n) :\n",
+        "                  if self.board[i][i] != player :\n",
+        "                      win = False\n",
+        "                      break\n",
+        "            if win == True :\n",
+        "                  return win\n",
+        "\n",
+        "          #왼쪽 대각선 확인\n",
+        "            win = True\n",
+        "            for i in range(n) :\n",
+        "                  if self.board[i][n - i -1] != player :\n",
+        "                      win = False\n",
+        "                      break\n",
+        "            if win == True :\n",
+        "                  return win\n",
+        "\n",
+        "            return False\n",
+        "\n",
         "    #잔여 빈칸 여부 확인\n",
         "    def is_board_full(self):\n",
+        "          for row in self.board :\n",
+        "                for item in row :\n",
+        "                      if item == '*' :\n",
+        "                          return False\n",
+        "          return True\n",
+        "\n",
         "\n",
         "    # 플레이어 변경\n",
         "    def next_player(self, player):\n",
+        "          if player == 'O' :\n",
+        "                return 'X'\n",
+        "          else :\n",
+        "                return 'O'\n",
+        "        #return 'X' if player == 'O' else 'O' 이렇게 쓸 수도 있음\n",
         "\n",
         "    # 현재 게임판 상태 출력\n",
         "    def show_board(self):\n",
+        "          for row in self.board :\n",
+        "                for item in row :\n",
+        "                      print(item, end = \" \") #출력시 줄바꿈 되지 않게 함\n",
+        "                print() #한 행을 출력후 다음줄로 뜀\n",
         "\n",
         "    # 게임 시작\n",
         "    def start(self):\n",
         "\n",
+        "          #새 게임판 생성\n",
+        "          self.create_board()\n",
+        "          self.show_board()\n",
+        "\n",
+        "          #첫 플레이어 선택\n",
+        "          player = self.select_first_player()\n",
+        "\n",
+        "          #게임 루프 시작\n",
+        "          while True:\n",
+        "\n",
+        "                #다음 플레이어 안내\n",
+        "                if player == 'X' :\n",
+        "                     print(\"컴퓨터 차례입니다.\")\n",
+        "                else :\n",
+        "                     print(\"사용자 차례입니다.\")\n",
+        "\n",
+        "                #현재 게임판 상태 출력\n",
+        "                self.show_board()\n",
+        "\n",
+        "                #사용자 입력 대기, 컴퓨터일 경우 랜덤 위치 반환\n",
+        "                if player == 'X' : #사용자가 컴퓨터일때, 무작위로 위치 설정\n",
+        "                      while True :\n",
+        "                              row, col = random.randint(1, 3), random.randint(1, 3)\n",
+        "                              #무작위로 입력받은 board의 좌표가 빈칸이면 반복 중단\n",
+        "                              if self.board[row - 1][col - 1] == '*' : #사용자가 입력할 인덱스와 컴퓨터의 인덱스(0부터 셈)의 불일치를 맞추기 위해 -1 함\n",
+        "                                    break;\n",
+        "\n",
+        "                      print(\"컴퓨터가 행 \" + str(row) + \", 열 \" + str(col) + \" 을/를 선택했습니다.\")\n",
+        "                      print()\n",
+        "                else :\n",
+        "                      #map 함수를 써서 리스트 각각의 요소에 함수를 적용해주고, 입력받은 위치값에 int 함수 적용. 1, 3 문자열을  int 로 변환\n",
+        "                      #이걸 list화 시키면 row, col 각각의 값에 1과 3이 들어감\n",
+        "                      row, col = list(map(int, input(\"선택할 빈칸의 위치를 입력하세요 : \").split()))\n",
+        "                      print(\"사용자가 행 \" + str(row) + \", 열 \" + str(col) + \" 을/를 선택했습니다.\")\n",
+        "                      print()\n",
+        "\n",
+        "                # row, col 입력값이 0, 0인 경우 게임 종료하기\n",
+        "                if row == 0 and col == 0 :\n",
+        "                      print(\"게임을 종료합니다.\")\n",
+        "                      break;  # 게임 루프 시작점의 while 루프가 종료됨\n",
+        "\n",
+        "                # 입력된 위치 표시\n",
+        "                self.mark_spot(row -1, col -1, player)\n",
+        "                self.show_board()\n",
+        "\n",
+        "                #현재 플레이어가 이겼는지 확인\n",
+        "                if self.is_win(player) == True :\n",
+        "                      if player == 'X' :\n",
+        "                          print(\"컴퓨터가 이겼습니다. 다시 도전하세요.\")\n",
+        "                      else :\n",
+        "                          print(\"사용자가 이겼습니다. 축하합니다!\")\n",
+        "                      break\n",
+        "\n",
+        "                # 게임판 가득찼는지 확인, 빈칸 여부 확인\n",
+        "                if self.is_board_full() == True :\n",
+        "                      print(\"무승부입니다. 다시 도전하세요\")\n",
+        "                      break\n",
+        "\n",
+        "                #플레이어 변경\n",
+        "                player = self.next_player(player)\n",
+        "\n",
+        "          # 최종 게임판 출력\n",
+        "          print()\n",
+        "          self.show_board()\n",
+        "\n",
         "\n",
         "\n",
         "# 게임 생성\n",
+        "TTT = Tic_Tac_Toe()\n",
         "\n",
-        "#게임 시작\n"
+        "#게임 시작\n",
+        "TTT.start()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7v9yf2l8MkTc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
